# UPR_Project

./: .gitignore  CMakeLists.txt  README.md
assets/: level-1_ground.csv  level-1_tiles.csv
assets/level1/: level-1_collisions.csv  level-1_ground_bottom.csv  level-1_ground_top.csv  level-1_items_bottom.csv  level-1_items_top.csv
assets/level2/: level-2_collisions.csv  level-2_food_placement.csv  level-2_ground_bottom.csv  level-2_ground_top.csv  level-2_items_bottom.csv  level-2_items_top.csv
src/: food.c  food.h  game.c  game.h  global.c  global.h  main.c  map.c  map.h  player.c  player.h  scene.c  scene.h
